--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -181,7 +181,23 @@ services:
     networks:
       - kafka-net
 
-
+  # Job Submitter
+  flink-job-submitter:
+    build:
+      context: .
+      dockerfile: flink/Dockerfile
+    networks:
+      - kafka-net
+    depends_on:
+      - flink-jobmanager
+      - flink-taskmanager
+    command: >
+      sh -c "
+      echo 'Waiting for Flink to be ready...' &&
+      sleep 60 &&
+      /opt/flink/bin/sql-client.sh -f /opt/flink/jobs/flink_sql_job.sql &&
+      echo 'Flink SQL job submitted successfully!'
+      "
   ################################################################################
   # PostgreSQL Database
   ################################################################################
@@ -192,7 +208,7 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_DB: transactions_db
-      POSTGRES_USER: transactions
+      POSTGRES_USER: transactions_user
       POSTGRES_PASSWORD: transactions123
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -200,7 +216,7 @@ services:
     networks:
       - kafka-net
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U transactions"]
+      test: ["CMD-SHELL", "pg_isready -U transactions_user -d transactions_db"]
       interval: 10s
       timeout: 5s
       retries: 5
